--- a/ToggleApp/app/src/main/res/values/strings.xml
+++ b/ToggleApp/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">ToggleApp</string>
     <string name="msg_btn_toggle">toggle</string>
     <string name="msg_btn_finish">finish</string>
+    <string name="appname">ToggleApp</string>
+    <string name="contentDescriptionImageButton">Icon</string>
 
 </resources>
