--- a/ToggleApp/app/src/main/res/values/strings.xml
+++ b/ToggleApp/app/src/main/res/values/strings.xml
@@ -34,5 +34,17 @@
         <item>A5</item>
         <item>A6</item>
     </string-array>
+    <string-array name="widgets">
+        <item>Main</item>
+        <item>Toast</item>
+        <item>TextView</item>
+        <item>EditText</item>
+        <item>CheckBox</item>
+        <item>RadioGroup</item>
+        <item>Spinner</item>
+        <item>ScrollView</item>
+        <item>DatePicker</item>
+        <item>TimePicker</item>
+    </string-array>
 
 </resources>
