--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Layouts</string>
     <string-array name="layouts">
         <item>FrameLayout</item>
+        <item>LinearLayout</item>
     </string-array>
 </resources>
