--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string-array name="layouts">
         <item>FrameLayout</item>
         <item>LinearLayout</item>
+        <item>TableLayout</item>
     </string-array>
 </resources>
