--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
         <item>FrameLayout</item>
         <item>LinearLayout</item>
         <item>TableLayout</item>
+        <item>GridLayout</item>
     </string-array>
 </resources>
