--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
         <item>LinearLayout</item>
         <item>TableLayout</item>
         <item>GridLayout</item>
+        <item>RelativeLayout</item>
     </string-array>
 </resources>
