--- a/Layouts/app/src/main/res/values/strings.xml
+++ b/Layouts/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
         <item>TableLayout</item>
         <item>GridLayout</item>
         <item>RelativeLayout</item>
+        <item>ConstraintLayout</item>
     </string-array>
 </resources>
