Calculation läuft jetzt mit Resources

--- a/MoneyConverter/app/src/main/res/values/strings.xml
+++ b/MoneyConverter/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">MoneyConverter</string>
+    <string-array name="wechselkursNamen">
+        <item>EUR</item>
+        <item>USD</item>
+        <item>GRD</item>
+        <item>BZD</item>
+    </string-array>
+    <string-array name="wechselkurse">
+        <item>1.00</item>
+        <item>0.84</item>
+        <item>0.002934</item>
+        <item>0.40</item>
+    </string-array>
 </resources>
