--- a/MoneyConverter/app/src/main/res/values/strings.xml
+++ b/MoneyConverter/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">MoneyConverter</string>
+    <string name="spquellwaehrung">Quellwährung auswählen</string>
+    <string name="spqzielwaehrung">Zielwährung eingeben</string>
     <string-array name="wechselkursNamen">
         <item>EUR</item>
         <item>USD</item>
