--- a/MoneyConverter/app/src/main/res/values/strings.xml
+++ b/MoneyConverter/app/src/main/res/values/strings.xml
@@ -6,10 +6,12 @@
         <item>EUR</item>
         <item>USD</item>
         <item>GRD</item>
+        <item>SOM</item>
     </string-array>
     <string-array name="wechselkurse">
         <item>1.00</item>
         <item>0.84</item>
         <item>0.002934</item>
+        <item>0.00995024</item>
     </string-array>
 </resources>
