Erste Preferences hinzugefügt
Bisher stehen nur die Nachkommastellen drin. Muss das noch in eine Activity einpflegen.
Is noch n bisschen hässlich weil's im XML steht. Kann man bestimmt auch generieren.

Es fehlen noch initiale quell und zielwährung
initialer quell-betrag
hinzufügen von währungen

--- a/MoneyConverter/app/src/main/res/values/strings.xml
+++ b/MoneyConverter/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">MoneyConverter</string>
     <string name="spquellwaehrung">Quellwährung auswählen</string>
     <string name="spqzielwaehrung">Zielwährung eingeben</string>
+    <string name="key_nachkommastellen">Nachkommastellen</string>
     <string-array name="wechselkursNamen">
         <item>EUR</item>
         <item>USD</item>
