--- a/MoneyConverter/app/src/main/res/values/strings.xml
+++ b/MoneyConverter/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="spqzielwaehrung">Zielwährung eingeben</string>
     <string name="key_nachkommastellen">Nachkommastellen</string>
     <string name="key_initiale_quellwaehrung">Initiale Quellwährung</string>
+    <string name="key_initiale_zielwaehrung">Initiale Zielwährung</string>
     <string-array name="wechselkursNamen">
         <item>EUR</item>
         <item>USD</item>
